content/v1.4.5/zh/api/campaign-ext/ClanMemberRolesCampaignBehavior.md
---
title: "ClanMemberRolesCampaignBehavior"
description: "ClanMemberRolesCampaignBehavior 的自动生成类参考。"
---
# ClanMemberRolesCampaignBehavior

**Namespace:** SandBox.CampaignBehaviors
**Module:** SandBox.CampaignBehaviors
**Type:** `public class ClanMemberRolesCampaignBehavior : CampaignBehaviorBase, IMissionPlayerFollowerHandler`
**Base:** `CampaignBehaviorBase`
**File:** `Modules.SandBox/SandBox/SandBox.CampaignBehaviors/ClanMemberRolesCampaignBehavior.cs`

## 概述

`ClanMemberRolesCampaignBehavior` 位于 `SandBox.CampaignBehaviors`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `SandBox.CampaignBehaviors` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** **用途 / Purpose:** 将events注册到当前系统，以便后续监听或分发。

```csharp
// 先通过子系统 API 拿到 ClanMemberRolesCampaignBehavior 实例
ClanMemberRolesCampaignBehavior clanMemberRolesCampaignBehavior = ...;
clanMemberRolesCampaignBehavior.RegisterEvents();
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** **用途 / Purpose:** 将data同步到相关上下文或系统中。

```csharp
// 先通过子系统 API 拿到 ClanMemberRolesCampaignBehavior 实例
ClanMemberRolesCampaignBehavior clanMemberRolesCampaignBehavior = ...;
clanMemberRolesCampaignBehavior.SyncData(dataStore);
```

### IsFollowingPlayer
`public bool IsFollowingPlayer(Hero hero)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否处于 following player 状态或条件。

```csharp
// 先通过子系统 API 拿到 ClanMemberRolesCampaignBehavior 实例
ClanMemberRolesCampaignBehavior clanMemberRolesCampaignBehavior = ...;
var result = clanMemberRolesCampaignBehavior.IsFollowingPlayer(hero);
```

### RemoveFollowingHero
`public void RemoveFollowingHero(Hero hero)`

**用途 / Purpose:** **用途 / Purpose:** 从当前容器或状态中移除 following hero。

```csharp
// 先通过子系统 API 拿到 ClanMemberRolesCampaignBehavior 实例
ClanMemberRolesCampaignBehavior clanMemberRolesCampaignBehavior = ...;
clanMemberRolesCampaignBehavior.RemoveFollowingHero(hero);
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
ClanMemberRolesCampaignBehavior clanMemberRolesCampaignBehavior = ...;
clanMemberRolesCampaignBehavior.RegisterEvents();
```

## 参见

- [本区域目录](../)